#363 app fix. #362 app fix. add icons to brand header. fix logged in dropdown cut off

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,14 +1,3 @@
-.navbar-link-profile-name span{
-    max-width: 200px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    text-align: left;
-    display: block;
-}
-.navbar-item-logged-in{
- display: none;
-}
 .hidden {
     display:none;
 }
